# RockGuard-Team_Recursion

./: .gitignore  Makefile  README.md  docker-compose.yml
Rockfall-Prediction-Model/: README.md  eda2.ipynb  model.ipynb  pyproject.toml
Rockfall-Prediction-Model/api/: .dockerignore  Dockerfile  __init__.py  main.py  requirements.txt  train_model.py
terrain-alert-ai/: README.md  index.html  tailwind.config.ts  tsconfig.app.json
terrain-alert-ai/src/: App.tsx  index.css
terrain-alert-ai/src/components/dashboard/: PredictionFeed.tsx  RiskGauge.tsx  TopFactorsChart.tsx
terrain-alert-ai/src/pages/: Index.tsx  LandingPage.tsx
terrain-alert-ai/src/services/: api.ts
